# limenex

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
blog/: index.html
blog/2026/04/20/your-ai-agent-just-spent-3000-nobody-told-it-to-stop/: index.html
blog/archive/2026/: index.html
contributing/: index.html
docs/blog/posts/: your-ai-agent-just-spent-3000.md
examples/: langgraph_example.ipynb
limenex/: __init__.py  __main__.py
limenex/core/: __init__.py  audit.py  engine.py  policy.py  policy_store.py  stores.py
limenex/skills/: __init__.py  _exceptions.py  _types.py  comms.py  filesystem.py  finance.py  web.py
search/: search_index.json
tests/: test_cli.py  test_decorator.py  test_engine.py  test_placeholder.py  test_skills.py
