[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "limenex"
version = "0.1.0"
description = "Agentic AI execution governance layer"
readme = "README.md"
authors = [
    { name = "Dennis Wong", email = "hello@limenex.dev" },
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage      = "https://limenex.dev"
Documentation = "https://limenex.dev"
Repository    = "https://github.com/limenex-hq/limenex"
Issues        = "https://github.com/limenex-hq/limenex/issues"
Changelog     = "https://github.com/limenex-hq/limenex/blob/main/CHANGELOG.md"